--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,26 @@
     color: rgb(255, 187, 0) !important;
     
   }
-  .dropdown-item:hover{
+  .dropdown-item{
     color: rgb(255, 187, 0) !important;
+    font-weight: bolder !important;
+    display: block;
+  }
+  .dropdown:hover .dropdown-menu{
+    display: block !important;
+  }
+  .dropdown:focus .dropdown-menu{
+    display: block !important;
+  }
+  .dropdown .dropdown-menu.show{
+    display: none !important;
   }
   .nav-link{
     font-weight: bolder !important ;
+  }
+  .content .text-white{
+    padding-top: 130% !important;
+    font-weight: 100;
   }
   .mission{
     background-image: url(./images/IMG_8624.jpg);
@@ -66,11 +81,19 @@ a.btn:hover{
 font-size: 20px;
 color: aliceblue;
 font-weight: bolder;
+}
 
-}
-.strategy{
-  font-size: 100%;
-}
 .words{
   padding-top: 10%;
+  padding-bottom: 10%;
+}
+.location{
+  font-size: 170%;
+  font-weight: bold;
+}
+
+.Strategy{
+  padding-bottom: 10%;
+  font-size: 200%;
+  font-weight: bold;
 }
