--- a/styles.css
+++ b/styles.css
@@ -32,19 +32,24 @@
     font-weight: 100;
   }
   .mission{
-    background-image: url(./images/IMG_8624.jpg);
+    background: url(./images/IMG_8624.jpg);
+    background-blend-mode: black;
     opacity: -20px;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat !important;
     background-position: center;
     padding-bottom: 5%;
   }
   .mission h1{
     font-size: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+
   }
 .mission P{
   font-size: 20px;
   color: aliceblue;
-  font-weight: bolder;
+  font-weight: light;
+  font-family: Arial;
+
   
 }
 a.btn{
