--- a/bootstrap-5.3.0-dist/css/bootstrap.css
+++ b/bootstrap-5.3.0-dist/css/bootstrap.css
@@ -8821,10 +8821,13 @@ textarea.form-control-lg {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-primary-rgb), var(--bs-bg-opacity)) !important;
 }
-
+.bg-gray{
+  --bs-bg-opacity: 1;
+  background: linear-gradient(to right,gray,rgb(235, 235, 235)) !important;
+}
 .bg-secondary {
   --bs-bg-opacity: 1;
-  background-color: rgba(var(--bs-secondary-rgb), var(--bs-bg-opacity)) !important;
+  background: linear-gradient(to left,gray,rgb(235, 235, 235)) !important;
 }
 
 .bg-success {
