--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,40 @@
     scroll-behavior: smooth !important;
     position: relative !important;
   }
+  
+  .home{
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: contain;
+}
+  .home .home-content .text-1{
+    font-size: 27px;
+}
+.home-content{
+  padding-left: 20%;
+  margin-top: 20%;
+}
+.hero{
+  background-image: url(./images/home-background-2.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding-bottom: 20%;
+}
+.heo img{
+  width: 100%;
+  height: auto;
+}
+.hero .leads{
+  text-align: left !important;
+}
   .banner-image{
     padding-bottom: 30%;
   }
 .navbar .nav-item .nav-link{
   color: rgb(255, 255, 255);
 }
+
   .navbar .nav-link:hover{
     color: rgb(8, 8, 8) !important;
     
@@ -41,17 +69,18 @@
   }
  
   .mission{
-    background-image: url(./images/woker.JPG);
+    background-image: url(./images/man-at-work.jpeg);
     opacity: -20px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: auto;
-    padding-bottom: 5%;
+
     background-size: cover;
     
   }
   .mission img{
-    filter: brightness(0.5);
+    width: 100%;
+    height: auto;
   }
   .mission h1{
     font-size: 70px;
@@ -90,11 +119,16 @@ a.btn:hover{
   font-weight: bolder;
 }
 .values{
-  background-image: url(./images/img321.JPG);
+  background-image: url(./images/vision.jpg);
   opacity: -20px;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   padding-top: 10%;
+}
+.values img{
+  width: 100%;
+  height: auto;
 }
 .values h1{
   font-size: 70px;
