--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,15 @@ p {
   color: rgb(255, 255, 255);
 }
 
+.text-orange {
+  color: orange !important;
+}
+
+.bg-orange {
+  color: rgb(255, 255, 255);
+  background-color: orange !important;
+}
+
 .mission {
   background: linear-gradient(0deg, rgba(75, 75, 75, 0.7), rgba(75, 75, 75, 0.7)), url(./images/mission-bg.jpg);
   background-repeat: no-repeat;
@@ -159,7 +168,6 @@ p {
   font-size: 23px;
   color: aliceblue;
   font-weight: normal;
-
 }
 
 a.btn {
@@ -211,19 +219,12 @@ a.btn:hover {
   font-weight: normal;
 }
 
-.words {
-  padding-top: 10%;
-  padding-bottom: 10%;
+.join-us-btn:hover {
+  color: black !important;
 }
 
 .location {
   font-size: 170%;
-  font-weight: bold;
-}
-
-.Strategy {
-  padding-bottom: 10%;
-  font-size: 200%;
   font-weight: bold;
 }
 
@@ -268,6 +269,10 @@ a.btn:hover {
   aspect-ratio: 1;
   object-fit: cover;
   object-position: center;
+}
+
+.text-justify {
+  text-align: justify !important;
 }
 
 
